--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 espero que sea de su agrado y les pueda ser útil. 
             </p>
            
-                    <p>Mis mejores proyectos <script src="/js/particles.min.js"></script>
-                        <script src="/js/app.js"></script> hasta el momento os los dejo aqui abajo para que podais disfrutarlos</p>
+                    <p>Mis mejores proyectos <script src="js/particles.min.js"></script>
+                        <script src="js/app.js"></script> hasta el momento os los dejo aqui abajo para que podais disfrutarlos</p>
                 </div>
             </div>
         </section>
@@ -57,7 +57,7 @@
                         <a class="btn__project" href="proyecto1.html">DualBoot!</a>
                     </div>
                     <div>
-                        <img class="img__project" src="/assets/dualboot.png" alt=""  width="500px">
+                        <img class="img__project" src="assets/dualboot.png" alt=""  width="500px">
                     </div>
                 </div>
                  <div class="projects__item__reverse itemPro">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 <div>
-                    <img class="img__project" src="/assets/discos.jpg" alt=""  width="500px">
+                    <img class="img__project" src="assets/discos.jpg" alt=""  width="500px">
                 </div>
             </div>
             <div class="projects__item itemPro">
@@ -91,16 +91,16 @@
        
     <footer>
         <div class="containerLogoLinks">
-            <a target="_blank" href="#"><img class="logoLinks" src="/assets/linkedinlogo.svg" alt=""></a>
-            <a target="_blank" href="formulario.html"><img class="logoLinks" src="/assets/sheetlogo.svg" alt="sheetlogo"></a>
-            <a target="_blank" href="#"><img class="logoLinks" src="/assets/githublogo.svg" alt="githublogo"></a>
-            <a target="_blank" href="#"><img class="logoLinks" src="/assets/gmaillogo.svg" alt="gmaillogo"></a>
+            <a target="_blank" href="#"><img class="logoLinks" src="assets/linkedinlogo.svg" alt=""></a>
+            <a target="_blank" href="formulario.html"><img class="logoLinks" src="assets/sheetlogo.svg" alt="sheetlogo"></a>
+            <a target="_blank" href="#"><img class="logoLinks" src="assets/githublogo.svg" alt="githublogo"></a>
+            <a target="_blank" href="#"><img class="logoLinks" src="assets/gmaillogo.svg" alt="gmaillogo"></a>
         </div>
         <p>&copy; 2024 Group 2. All rights reserved.</p>
     </footer>
 
     <!-- JS Particles -->
-    <script src="/js/particlesPlantillaBlue-main.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/particlesPlantillaBlue-main.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
