--- a/proyecto1.html
+++ b/proyecto1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
     <title>Document</title>
@@ -32,8 +32,8 @@
              del cual estoy muy orgulloso, espero que os sirva de ayuda 
         </p>
        
-                    <script src="js/particles.min.js"></script>
-                    <script src="js/app.js"></script>
+                    <script src="./js/particles.min.js"></script>
+                    <script src="./js/app.js"></script>
             </div>
         </div>
     </section>
@@ -56,7 +56,7 @@
                     <a class="btn__project" href="proyecto1.html">DualBoot!</a>
                 </div>
                 <div>
-                    <img class="img__project" src="assets/dualboot.png" alt=""  width="500px">
+                    <img class="img__project" src="./assets/dualboot.png" alt=""  width="500px">
                 </div>
             </div>
         </div>
