--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <a class="nav__l" href="#aboutme">Un poco sobre mi</a>
             <a class="nav__l" href="proyecto1.html">Proyecto DualBoot</a>
             <a class="nav__l" href="proyecto2.html">Proyecto Discos</a>
-            <a class="nav__l" href="proyectos.html">Mis Projectos</a>       
+            <a class="nav__l" href="proyectos.html">Mis Projectos</a>
+            <a class="nav__l" href="formulario.html">Formulario</a>      
         </div>
     </section>
 </header>
@@ -54,7 +55,7 @@
                             crear uno, funcionaban Linux y WIndows en la misma maquina!
                             Aqui os dejo mi proyecto y como lo hice. 
                         </p>
-                        <a class="btn__project" href="proyecto1.html">DualBoot!</a>
+                        <a class="btn__project" href="proyecto2.html">DualBoot!</a>
                     </div>
                     <div>
                         <img class="img__project" src="./assets/dualboot.png" alt=""  width="500px">
@@ -74,7 +75,7 @@
                                     formatearlos, augmentar medidas, darles un sistema de ficheros... 
                                     Aqui os dejo como!
                                 </p>
-                            <a class="btn__project" href="#">Discos!</a>
+                            <a class="btn__project" href="proyecto1.html">Discos!</a>
                         </div>
                     </div>
                 <div>
