--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/githublogo.svg" alt="githublogo"></a>
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="gmaillogo"></a>
         </div>
-        <p>&copy; 2024 Group 2. All rights reserved.</p>
+        <p>&copy; 2024 Adrià Congostrina. All rights reserved.</p>
     </footer>
 
     <!-- JS Particles -->
