--- a/proyectos.html
+++ b/proyectos.html
@@ -57,7 +57,7 @@
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/githublogo.svg" alt="GitHub"></a>
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="Email"></a>
         </div>
-        <p>&copy; 2024 Ian Frias Reyes. All rights reserved.</p>
+        <p>&copy; 2024 Adrià Congostrina. All rights reserved.</p>
     </footer>
 </body>
 </html>
