--- a/proyectos.html
+++ b/proyectos.html
@@ -24,14 +24,14 @@
                     <img src="./assets/discos.jpg" alt="Discos!" class="project-card__image">
                     <h3 class="project-card__title">Discos!</h3>
                     <p class="project-card__description">Una pequeña practica de formatear discos, augmentar su tamaño ...</p>
-                    <a href="proyecto2.html" class="btn__project">Visualizacion</a>
+                    <a href="proyecto1.html" class="btn__project">Visualizacion</a>
                 </div>
                 <!-- Project 2 -->
                 <div class="project-card">
                     <img src="./assets/dualboot1.png" alt="Dualboot!" class="project-card__image">
                     <h3 class="project-card__title">Dualboot!</h3>
-                    <p class="project-card__description">Una practica sobre dualboot y como hacer que funcione</p>
-                    <a href="proyecto1.html" class="btn__project">Visualizacion</a>
+                    <p class="project-card__description">Una práctica sobre dualboot y como hacer que funcione</p>
+                    <a href="proyecto2.html" class="btn__project">Visualización</a>
                 </div>
                 <!-- Project 3 -->
                 <div class="project-card">
