--- a/proyecto2.html
+++ b/proyecto2.html
@@ -51,7 +51,7 @@
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/githublogo.svg" alt="GitHub"></a>
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="Email"></a>
         </div>
-        <p>&copy; 2024 Adrià Congostrina. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Adrià Congostrina. All rights reserved.</p>
     </footer>
 </body>
 </html>
