--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="containerLogoLinks">
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/linkedinlogo.svg" alt=""></a>
             <a target="_blank" href="formulario.html"><img class="logoLinks" src="./assets/sheetlogo.svg" alt="sheetlogo"></a>
-            <a target="_blank" href="#"><img class="logoLinks" src="./assets/githublogo.svg" alt="githublogo"></a>
-            <a target="_blank" href="#"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="gmaillogo"></a>
+            <a target="_blank" href="https://github.com/adria-congostrina"><img class="logoLinks" src="./assets/githublogo.svg" alt="githublogo"></a>
+            <a target="_blank" href="mailto:adria.congostrina.7e8@itb.cat"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="gmaillogo"></a>
         </div>
         <p>&copy; 2024 Adrià Congostrina. All rights reserved.</p>
     </footer>
