--- a/proyectos.html
+++ b/proyectos.html
@@ -53,9 +53,9 @@
     <footer>
         <div class="containerLogoLinks">
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/linkedinlogo.svg" alt="LinkedIn"></a>
-            <a target="_blank" href="contact.html"><img class="logoLinks" src="./assets/sheetlogo.svg" alt="Contact Form"></a>
-            <a target="_blank" href="#"><img class="logoLinks" src="./assets/githublogo.svg" alt="GitHub"></a>
-            <a target="_blank" href="#"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="Email"></a>
+            <a target="_blank" href="formulario.html"><img class="logoLinks" src="./assets/sheetlogo.svg" alt="Contact Form"></a>
+            <a target="_blank" href="https://github.com/adria-congostrina"><img class="logoLinks" src="./assets/githublogo.svg" alt="GitHub"></a>
+            <a target="_blank" href="mailto:adria.congostrina.7e8@itb.cat"><img class="logoLinks" src="./assets/gmaillogo.svg" alt="Email"></a>
         </div>
         <p>&copy; 2024 Adrià Congostrina. All rights reserved.</p>
     </footer>
