--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         
         <div class="nav">
             <a class="nav__l" href="#aboutme">Un poco sobre mi</a>
-            <a class="nav__l" href="proyecto1.html">Proyecto DualBoot</a>
-            <a class="nav__l" href="proyecto2.html">Proyecto Discos</a>
+            <a class="nav__l" href="proyecto1.html">Proyecto Discos</a>
+            <a class="nav__l" href="proyecto2.html">Proyecto Dualboot</a>
             <a class="nav__l" href="proyectos.html">Mis Projectos</a>
             <a class="nav__l" href="formulario.html">Formulario</a>      
         </div>
