--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <main>
         <section class="aboutme" id="aboutme">
             <h3 class="aboutme__title">Mi historia</h3>
-            <div class="aboutme__photo"></div>
-            <p class="aboutme__text">
+            <image src="./assets/FOTO CARNET.PNG" alt="My photo" class="aboutme__photo">
+            <aside class="aboutme__text">
                 Soy un estudiante de primer año de grado superior ASIXc
                 en esta web os voy a enseñar una seleccion de mis proyectos
                 espero que sea de su agrado y les pueda ser útil. 
-            </p>
+            </aside>
            
                     <p>Mis mejores proyectos <script src="./js/particles.min.js"></script>
                         <script src="./js/app.js"></script> hasta el momento os los dejo aqui abajo para que podais disfrutarlos</p>
