--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section class="aboutme" id="aboutme">
             <h3 class="aboutme__title">Mi historia</h3>
-            <image src="./assets/FOTO CARNET.PNG" alt="My photo" class="aboutme__photo">
+            <image src="./assets/fotocarnet.png" alt="My photo" class="aboutme__photo">
             <aside class="aboutme__text">
                 Soy un estudiante de primer año de grado superior ASIXc
                 en esta web os voy a enseñar una seleccion de mis proyectos
