--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="nav__l" href="proyecto1.html">Proyecto Discos</a>
             <a class="nav__l" href="proyecto2.html">Proyecto Dualboot</a>
             <a class="nav__l" href="proyectos.html">Mis Projectos</a>
-            <a class="nav__l" href="formulario.html">Formulario</a>      
+            <a class="nav__l" href="formulario.html">Formulario</a> 
         </div>
     </section>
 </header>
@@ -91,6 +91,7 @@
     </main>
        
     <footer>
+        <p class="visit-counter">Visitas: <span id="visitCounter">0</span> </p>
         <div class="containerLogoLinks">
             <a target="_blank" href="#"><img class="logoLinks" src="./assets/linkedinlogo.svg" alt=""></a>
             <a target="_blank" href="formulario.html"><img class="logoLinks" src="./assets/sheetlogo.svg" alt="sheetlogo"></a>
@@ -103,5 +104,6 @@
     <!-- JS Particles -->
     <script src="./js/particlesPlantillaBlue-main.min.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/views.js"></script>
 </body>
 </html>
